app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: assignment-deployment
spec:
  selector:
    matchLabels:
      app: assignment-demo
  replicas: 3
  template:
    metadata:
      labels:
        app: assignment-demo
    spec:
      containers:
        - name: assignment
          image: unnati2409/assignment-repo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---


apiVersion: v1
kind: Service
metadata:
  name: assignment-svc
spec:
  selector:
    app: assignment-demo
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: NodePort
