assignment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-assignment
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: employee-system.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assignment-svc
                port:
                  number: 8080
